<resources>
    <string name="app_name">Lost &amp; Survive</string>
    <string name="not_available">Not Available</string>
    <string name="title_activity_maps">Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="desert_pre">1. Take clothes that minimizes sweat loss. Wear white or others that is light in color.\n
2. Take sunglasses hat and gloves if you have any.\n
3. Store your water in different cans, so that if leaked the total water won’t get wasted\n
4. Take foods that includes salt and potassium
Food is not a priority in a desert emergency. If you are out of water, only eat the minimum required to function.\n
5. Before setting out for desert pack the survival equipment,
Ropes, blankets, water purification tablet, knife etc.</string>
    <string name="desert_post">1. Become nocturnal. It’s cold at night so walking would cause less sweat.
This single decision will save your body about three liters (three quarts) of water per day.\n
2. Stay in shelter during day.\n
3. signal for help. Make a fire at day to use the smoke, use a torch at night. (photo)\n
4. Find water sources. If there\'s been a rainstorm recently, you may find pockets of water in rock outcrops or flat stone surfaces. More often, you\'ll need to search for areas with possible groundwater:\n
    Follow animal tracks leading downhill, birds circling around something, or even flying insects.\n
    Walk to the greenest vegetation you can see, especially large plants with wide leaves.\n
    Follow canyons or dry river beds upstream, and look for a depression, especially on the outside edge of a bend.\n
    Look for a slope of hard, non-porous rock, where rainwater would run into the soil. Dig in the sand or soil at the base of this slope.\n
    In developed areas, look for buildings or troughs. When the sun is low, its glare will reflect off distant metal objects and water collection structures.\n
5. stay away from animals and cactuses.</string>
    <string name="island_pre">
        1. Look for others if you had a boat or plane crush.\n
2. Get everything you can gather, water, food supply cloths, knifes, matches etc.\n
3. Find a source of drinking water and source of food.\n
4. Make a shelter. (see how to make one)\n
5. stay in the beach and give signal to get help.\n
Write something in the sand in large scale so that any sea-plane notices. Light up fire and create smoke, if there is a mountain light up the fire in the top of the mountain like the story “Fire on The Mountain” by William Golding.\n
6. Try to purify the water to avoid water contaminated diseases (go to details).\n
7. Trap animals for food using a deadfall trap. (go to details) \n
8. Try to catch some fish for protein. (go to details)\n
    </string>
    <string name="pre">Pre-travelling</string>
    <string name="post">Survival</string>
    <string name="preDes1">1. Take clothes that minimizes sweat loss. Wear white or others that is light in color</string>
    <string name="preDes2">2. Take sunglasses hat and gloves if you have any</string>
    <string name="preDes3">3. Store your water in different cans, so that if leaked the total water won’t get wasted</string>
    <string name="preDes4">4. Take foods that includes salt and potassium
Food is not a priority in a desert emergency. If you are out of water, only eat the minimum required to function</string>
    <string name="preDes5">5. Before setting out for desert pack the survival equipment,
Ropes, blankets, water purification tablet, knife etc.</string>
    <string name="postDes1">1. Become nocturnal. It’s cold at night so walking would cause less sweat.
    This single decision will save your body about three liters (three quarts) of water per day.</string>
    <string name="postDes2">2. Stay in shelter during day</string>
    <string name="postDes3">3. Signal for help. Make a fire at day to use the smoke, use a torch at night</string>
    <string name="postDes4">4. Find water sources. If there has been a rainstorm recently, you may find pockets of water in rock outcrops or flat stone surfaces. More often, you will need to search for areas with possible groundwater:

    Follow animal tracks leading downhill, birds circling around something, or even flying insects.
    Walk to the greenest vegetation you can see, especially large plants with wide leaves.
    Follow canyons or dry river beds upstream, and look for a depression, especially on the outside edge of a bend.
    Look for a slope of hard, non-porous rock, where rainwater would run into the soil. Dig in the sand or soil at the base of this slope.
    In developed areas, look for buildings or troughs. When the sun is low, its glare will reflect off distant metal objects and water collection structures</string>
    <string name="postDes5">5. Stay away from animals and cactuses</string>
    <string name="Premount1">1. Make a detailed travel plan and make sure that each person traveling with you has a copy of it.  This plan should also include meeting points in case something happens that causes you to get separated from the group</string>
    <string name="Premount2">2. Aside from having first aid supplies, one or more people in the group should be trained in how to handle medical emergencies. It will also be helpful if this person knows how to use natural medicines</string>
    <string name="Premount3">3. Try to travel with at least 2 other people. It is not advisable to travel alone</string>
    <string name="Premount4">4. Everyone in the hiking party should have their own backpack equipped with basic survival supplies. This should include a compass, map, mirror, small first aid kit, whistle, flashlight, a fully charged cell phone or satellite phone (with emergency phone numbers), and bright colored material to attract aerial rescuers</string>
    <string name="Premount5">5. It is important to always bring food or water with you even through it is only a day hike</string>
    <string name="Premount6">6. Each member of the party should have a compact water filter system and water purification tablets</string>
    <string name="Premount7">7. Bring an emergency blanket and a tarp to help you stay warm</string>
    <string name="Premount8">8. Pack the correct clothing for the time of year. If it is cool or cold, then pack clothing that can be worn in layers to put on or take off as necessary</string>
    <string name="Premount9">9. Bring the correct type of gear for the time of year. This could include snowshoes, cross country skies, insulated boots or ice grippers for the boots</string>
    <string name="Premount10">10. If you are going to be in a snowy country,  be sure to pack your emergency beacon and emergency airbag. When activated, the airbag will give you more buoyancy, which helps to keep you on top of the avalanche</string>
    <string name="postMount1">1. First, DO NOT PANIC!</string>
    <string name="postMount2">2. You must stop, stay calm, stay put and make your plan</string>
    <string name="postMount3">3. Sit down, eat and drink something. This will calm you down and give you a chance to make a plan</string>
    <string name="postMount4">4. Panicking can only make it worse for you.  The last thing you want to do is go thrashing around further away from a viable trail or deeper into the mountain wilderness.  If it is getting late in the day and you are in a safe area, it may be best to make camp and get a good night’s rest before starting again in the morning</string>
    <string name="postMount5">5. If you feel you are lost do not start running or walking faster than your normal pace.   If you do, you risk the chance of falling in the mountainous terrain</string>
    <string name="postMount6">6. Never split from the group or split the group up. If you do so, the rescue party will be looking for two groups of people instead of one</string>
    <string name="preAbroad1">1. Double check and make sure that you have all of the proper vaccinations and that you have renewed all essential prescriptions</string>
    <string name="preAbroad2">2.  Bring copies of your passport. If your passport gets stolen or lost you want to be sure that you can still get back into the country, or be able to prove your citizenship</string>
    <string name="preAbroad3">3.  Leave a copy of your passport. For extra backup, leave a copy of your passport at home or with someone you trust. Consider making an electronic copy you can store in your email account as well</string>
    <string name="preAbroad4">4.  Register with your embassy. If there’s a problem in the country, this will make it easier for your government to contact you and get you to safety</string>
    <string name="preAbroad5">5.  Make sure your credit card will work in the country you’re visiting. European banks have switched almost completely to the more secure chip-and-PIN technology, and fewer businesses abroad are accepting the outdated magnetic-stripe cards</string>
    <string name="preAbroad6">6.  Always have local cash. Not every place takes credit cards. Especially important places like trains or buses</string>
    <string name="preAbroad7">7.  Get guidebooks. Guidebooks usually include maps, key words or phrases, and give you enough detail on certain sites that you won’t need to purchase the pamphlet at the venue. And download apps before you travel. Avoid downloading charges from your wireless carrier and get your apps before you leave</string>
    <string name="preAbroad8">8.  Bring a charger adapter. Countries have different size plugs and voltage. So if you want to use your iPod, make sure you can charge it</string>
    <string name="preAbroad9">9. Take power banks with you, so that your phone remains charged</string>
    <string name="postAbroad1">1. If you are lost, don’t panic, use this app and find your location</string>
    <string name="postAbroad2">2. If have lost anything or if your bag is snatched then use the app to find your way to the nearest police station</string>
    <string name="postAbroad3">3. If you feel sick, use the app to get to the nearest hospital to you</string>
    <string name="postAbroad4">4. You may find your direction using the compass</string>
</resources>