<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <!--pre tips-->


        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pre"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preDes1"
            style="@style/TipsMargin"
            android:textSize="@dimen/tipsTextSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TipsMargin"
            android:text="@string/preDes2"
            android:textSize="@dimen/tipsTextSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TipsMargin"
            android:text="@string/preDes3"
            android:textSize="@dimen/tipsTextSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TipsMargin"
            android:text="@string/preDes4"
            android:textSize="@dimen/tipsTextSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TipsMargin"
            android:text="@string/preDes5"
            android:textSize="@dimen/tipsTextSize" />


        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/post"
            />

        <TextView
            style="@style/TipsMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postDes1"
            android:textSize="@dimen/tipsTextSize" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/imgMargin"
            android:layout_marginTop="@dimen/imgMargin"
            android:src="@drawable/post_des1" />

        <TextView
            style="@style/TipsMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/postDes2"
            android:textSize="@dimen/tipsTextSize" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/imgMargin"
            android:layout_marginTop="@dimen/imgMargin"
            android:src="@drawable/des_shelter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TipsMargin"
            android:text="@string/postDes3"
            android:textSize="@dimen/tipsTextSize" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/imgMargin"
            android:layout_marginTop="@dimen/imgMargin"
            android:src="@drawable/signal_desert" />

        <TextView
            style="@style/TipsMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postDes4"
            android:textSize="@dimen/tipsTextSize" />

        <TextView
            style="@style/TipsMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postDes5"
            android:textSize="@dimen/tipsTextSize" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/imgMargin"
            android:layout_marginTop="@dimen/imgMargin"
            android:src="@drawable/cactus" />


    </LinearLayout>


</ScrollView>
